Particles not generated on Grid Distribution #31017

Closed
opened 2012-04-19 16:49:30 +02:00 by Sebastian Röthlisberger · 10 comments

%%%Recreate:

  • Take any Mesh
  • Add Particles
  • Set distribution from Jittered to Grid
  • (Set Particle End to 1 to emit all on frame 1)

if you enable "- [x] invert Grid" it draws Particles in Hole Bounding Box.

PS: I would suggest a Particle Category for Bugs.%%%

%%%Recreate: - Take any Mesh - Add Particles - Set distribution from Jittered to Grid - (Set Particle End to 1 to emit all on frame 1) if you enable "- [x] invert Grid" it draws Particles in Hole Bounding Box. PS: I would suggest a Particle Category for Bugs.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn, thanks for the report.%%%

%%%Fixed in svn, thanks for the report.%%%

%%%thanks. It's almost fixed. There still is a Diagonal Line inside The Generated Particles where Particles are not Generated!

I hope you/someone see's this, otherwise i make a new Bug Report. Thanks.
%%%

%%%thanks. It's almost fixed. There still is a Diagonal Line inside The Generated Particles where Particles are not Generated! I hope you/someone see's this, otherwise i make a new Bug Report. Thanks. %%%

%%%Made some quick tests and can't see such diagonal line. Can you please upload sample .blend file? Also this might be caused by some platform specific issues like precision so please provide your system's specifications.%%%

%%%Made some quick tests and can't see such diagonal line. Can you please upload sample .blend file? Also this might be caused by some platform specific issues like precision so please provide your system's specifications.%%%

%%%i'm on osx 10.7.4

tested with own build and official

i have drawn in Lines where the Particles are Missing. As you can see the Row Facing x + is there but the others aren't.

http://www.pasteall.org/blend/14349

thanks and let me know if you need more info.%%%

%%%i'm on osx 10.7.4 tested with own build and official i have drawn in Lines where the Particles are Missing. As you can see the Row Facing x + is there but the others aren't. http://www.pasteall.org/blend/14349 thanks and let me know if you need more info.%%%

%%%There's still this diagonal missing Particles on Grid Distribution... please look at my File. %%%

%%%There's still this diagonal missing Particles on Grid Distribution... please look at my File. %%%

%%%still open? Think this could be fixed "relative" easily...

Makes Grid distribution kind of unusable, esp. with SPH Fluid....%%%

%%%still open? Think this could be fixed "relative" easily... Makes Grid distribution kind of unusable, esp. with SPH Fluid....%%%
Member

%%%Issue confirmed, but this code is very difficult to follow, i need the maintainer to check a fix.

Janne: here is the old and new grid code in particle_system.c: distribute_grid()
http://www.pasteall.org/36517%%%

%%%Issue confirmed, but this code is very difficult to follow, i need the maintainer to check a fix. Janne: here is the old and new grid code in particle_system.c: distribute_grid() http://www.pasteall.org/36517%%%
Member

%%%Hopefully a final fix in svn! The problem was that one test in the grid-creation algorithm resulted in a double intersection at the diagonals, so the particles near those points got marked as being outside of the object.%%%

%%%Hopefully a final fix in svn! The problem was that one test in the grid-creation algorithm resulted in a double intersection at the diagonals, so the particles near those points got marked as being outside of the object.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31017
No description provided.