Final fix for [#31017] Particles not generated on Grid Distribution * In some cases a quad would be intersected twice so particles near this double-intersection point were not generated in grid distribution due to being marked as outside the surface.